[WIN] Fix MSVC C4146 compiler warning https://bugs.webkit.org/show_bug.cgi?id=121838

Reviewed by Brent Fulgham.

Fix some variables from unsinged to int to fix the compiler warning
"unary minus operator applied to unsigned type, result still unsigned".

* DumpRenderTree/WorkQueueItem.h:
(BackItem::BackItem):
(ForwardItem::ForwardItem):
* DumpRenderTree/win/DumpRenderTree.cpp:
(createWebViewAndOffscreenWindow):


Canonical link: https://commits.webkit.org/139923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156418 268f45cc-cd09-0410-ab3c-d52691b4dbfc